bug: rankings images on mobile; bug: scramble text #rankings

--- a/list-style.css
+++ b/list-style.css
@@ -209,6 +209,7 @@
   }
 
   #rankings .background-image {
-    display: none; /* Hide image on mobile */
+    width: 400px;
+    height: 300px;
   }
 }
